--- a/principal/pageP.html
+++ b/principal/pageP.html
@@ -18,7 +18,7 @@
         <p>Crea tu hoja de vida profesional de forma fácil y rápida, y postula a las mejores ofertas del mercado.</p>
         
         <div class="action-buttons">
-            <!-- Estos enlaces llevarán a las futuras páginas de login y registro -->
+            <!-- enlaces para las otras paginas -->
             <a href="login.html" class="btn btn-secondary">Iniciar Sesión</a>
             <a href="register.html" class="btn btn-primary">Registrarse</a>
         </div>
