--- a/roll/admin/panel.html
+++ b/roll/admin/panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Administrador</title>
-    <link rel="stylesheet" href="/roll/usuario/dashboard-styles.css"> <!-- Reutilizamos los estilos -->
+    <link rel="stylesheet" href="/roll/usuario/dashboard-styles.css"> 
     <style>
         .application-list { list-style: none; padding: 0; }
         .application-item { background-color: #f9f9f9; border: 1px solid #eee; border-radius: 8px; padding: 15px; margin-bottom: 15px; display: flex; justify-content: space-between; align-items: center; }
@@ -13,7 +13,7 @@
         .application-item-actions select { padding: 8px; border-radius: 5px; border: 1px solid #ccc; }
         .filter-container { margin-bottom: 20px; }
 
-        /* Estilos para la ventana modal */
+        /* le metemos un estilo extra a esta ventana directamente */
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5); }
         .modal-content { background-color: #fefefe; margin: 5% auto; padding: 20px; border: 1px solid #888; width: 80%; max-width: 700px; border-radius: 12px; position: relative; }
         .close-btn { color: #aaa; position: absolute; top: 10px; right: 25px; font-size: 28px; font-weight: bold; cursor: pointer; }
@@ -35,7 +35,7 @@
                 <select id="vacancy-filter"></select>
             </div>
             <ul id="applications-list" class="application-list">
-                <!-- Las postulaciones se cargarán aquí -->
+                <!-- Las postulaciones se cargan aquí -->
             </ul>
         </section>
 
@@ -55,10 +55,10 @@
         </section>
     </main>
 
-    <!-- Contenedor para notificaciones (reutilizado) -->
+    <!-- Contenedor para notificaciones  -->
     <div id="toast-container"></div>
 
-    <!-- Ventana Modal para ver la Hoja de Vida -->
+    <!-- ventana para ver la Hoja de Vida -->
     <div id="cv-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
@@ -68,7 +68,7 @@
     </div>
 
     <script>
-        // --- AUTENTICACIÓN Y CARGA INICIAL ---
+        //  autentica el inicio de sesion
         document.addEventListener('DOMContentLoaded', () => {
             const token = localStorage.getItem('token');
             if (!token) {
@@ -78,16 +78,16 @@
 
             loadApplications(token);
 
-            // Evento para cerrar sesión
+            // boton de cerrar sesion
             document.getElementById('logout-btn').addEventListener('click', () => {
                 localStorage.removeItem('token');
                 window.location.href = '/login.html';
             });
 
-            // Evento para el formulario de crear vacante
+            // crea las vacantes
             document.getElementById('create-vacancy-form').addEventListener('submit', (e) => createVacancy(e, token));
 
-            // Eventos para la ventana modal
+            //cuadra la ventana flotante del cv
             const modal = document.getElementById('cv-modal');
             const closeBtn = document.querySelector('.close-btn');
             closeBtn.onclick = () => modal.style.display = 'none';
@@ -96,9 +96,9 @@
             };
         });
 
-        let allApplications = []; // Almacenamos todas las postulaciones para filtrar
+        let allApplications = []; // almacena todas las postulaciones
 
-        // --- CARGAR Y MOSTRAR POSTULACIONES ---
+        // muestra las postulaciones
         async function loadApplications(token) {
             try {
                 const response = await fetch('/api/admin/applications', {
@@ -117,6 +117,7 @@
                 document.getElementById('applications-list').innerHTML = `<p class="error">${error.message}</p>`;
             }
         }
+        // crea el filtro de vacantes
 
         function populateVacancyFilter(applications) {
             const filterSelect = document.getElementById('vacancy-filter');
@@ -141,6 +142,7 @@
             });
         }
 
+        // muestra las postulaciones en la lista
         function displayApplications(applications) {
             const list = document.getElementById('applications-list');
             if (applications.length === 0) {
@@ -168,7 +170,7 @@
             `).join('');
         }
 
-        // --- ACCIONES DEL ADMINISTRADOR ---
+        // me permite ver la hoja de vida completa
 
         async function viewCv(userId) {
             const token = localStorage.getItem('token');
@@ -203,7 +205,7 @@
                 modalBody.innerHTML = `<p class="error">Error al cargar la hoja de vida: ${error.message}</p>`;
             }
         }
-
+        // actualiza el estado de la postulacion
         async function updateStatus(selectElement) {
             const id_postulacion = selectElement.dataset.id;
             const estado = selectElement.value;
@@ -230,7 +232,7 @@
                 showToast(error.message, 'error');
             }
         }
-
+        // crea una nueva vacante
         async function createVacancy(event, token) {
             event.preventDefault();
             const form = event.target;
@@ -251,7 +253,7 @@
 
                 showToast(result.message, 'success');
                 form.reset();
-                // Opcional: Recargar las postulaciones para que el filtro se actualice
+                
                 loadApplications(token);
 
             } catch (error) {
@@ -259,11 +261,11 @@
             }
         }
 
-        // --- FUNCIÓN DE NOTIFICACIONES (reutilizada) ---
+        // funcions para mostrar notificaciones tipo toast(mensajes flotantes)
         function showToast(message, type = 'success') {
             const container = document.getElementById('toast-container') || document.body;
             const toast = document.createElement('div');
-            // Usamos estilos inline simples para no depender de otro CSS
+            // creamos unos estilos basicos aparte para no crear un css extra
             toast.style.position = 'fixed';
             toast.style.bottom = '20px';
             toast.style.left = '50%';
